internal/pkg/parser/testdata/missing_route.yml
testCases:
  - description: wantMatch false requires route
    wantMatch: false
    request:
      authority: ["example.com"]
      method: ["GET"]
      uri: ["/"]

  - description: wantMatch true requires route
    wantMatch: true
    request:
      authority: ["example.com"]
      method: ["GET"]
      uri: ["/"]
